// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`eclipse initiator should be blinded by eclipse 1`] = `
"*Игрок 1* использовал _Затмение_ на *Игрок 3*
\\[ 📖80 ]
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Затмение_ *Игрок 1*"
`;

exports[`eclipse should handle several casters 1`] = `
"*Игрок 1* использовал _Затмение_ на *Игрок 3*
\\[ 📖80 ]
*Игрок 2* использовал _Затмение_ на *Игрок 1*
\\[ 📖80 ]
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Затмение_ *Игрок 1*
_Затмение_ *Игрок 2*"
`;
